# sCVD

./: CMakeLists.txt  main.cpp  main_alpha_srim.cpp  main_alpha_trim.cpp  main_gamma.cpp  main_mip.cpp
data/: Helium_in_Carbon.txt
